# pasteback

./: .gitignore  README.md  index.html  main.js  railway.toml
server/: Cargo.toml  index.html  test.html
server/src/: image_hand.rs  main.rs  paste_hand.rs
