[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.7.10", features = ["io"] }
serde = { version = "1.0.198", features = ["derive"] }

rand = "0.8.5"
lazy_static = "1.4.0"