[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.9"
tokio = { version = "1.49.0", features = ["full"] }
tokio-util = { version = "0.7.18", features = ["io"] }
serde = { version = "1.0.228", features = ["derive"] }
openfile = "2.1.0"
rand = "0.9.2"
lazy_static = "1.5.0"
bytes = "1.11.0"